# gosat

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: main.cpp
src/CodeGen/: CodeGen.cpp  CodeGen.h  FPExprCodeGenerator.cpp  FPExprCodeGenerator.h  FPExprLibGenerator.cpp  FPExprLibGenerator.h
src/ExprAnalyzer/: FPExprAnalyzer.cpp  FPExprAnalyzer.h
src/IRGen/: FPIRGenerator.cpp  FPIRGenerator.h
src/Optimizer/: ModelValidator.cpp  ModelValidator.h  NLoptOptimizer.cpp  NLoptOptimizer.h
src/Utils/: FPAUtils.cpp  FPAUtils.h  fpa_util.cpp  fpa_util.h
tools/: README.md
tools/bh_solver/: .gitignore  bh_solver.py
tools/nl_solver/: .gitignore  CMakeLists.txt  GOFuncsMap.h  nl_solver.cpp
